<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/signin_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint_text"

            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/signin_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/signin_button"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_shape"
            android:text="@string/signin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/go_to_sign_up"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="@string/create_new_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>